crates/rattler_menuinst/src/snapshots/rattler_menuinst__schema__test__deserialize_gnuradio.snap
---
source: crates/rattler_menuinst/src/schema.rs
expression: schema
---
MenuInstSchema {
    id: "https://schemas.conda.io/menuinst-1.schema.json",
    schema: "https://json-schema.org/draft-07/schema",
    menu_name: "{{ DISTRIBUTION_NAME }}",
    menu_items: [
        MenuItem {
            name: "GNU Radio Companion",
            description: "Flowgraph builder for GNU Radio",
            command: [
                "{{ BIN_DIR }}/gnuradio-companion",
            ],
            icon: Some(
                "{{ MENU_DIR }}/grc.{{ ICON_EXT }}",
            ),
            precommand: None,
            precreate: None,
            working_dir: None,
            activate: None,
            terminal: None,
            platforms: Platforms {
                linux: None,
                osx: None,
                win: Some(
                    Windows {
                        base: BasePlatformSpecific {
                            name: "",
                            description: "",
                            icon: None,
                            command: [],
                            working_dir: None,
                            precommand: None,
                            precreate: None,
                            activate: None,
                            terminal: None,
                        },
                        desktop: Some(
                            false,
                        ),
                        quicklaunch: Some(
                            false,
                        ),
                        terminal_profile: None,
                        url_protocols: None,
                        file_extensions: None,
                        app_user_model_id: None,
                    },
                ),
            },
        },
    ],
}
