crates/rattler_menuinst/src/snapshots/rattler_menuinst__schema__test__deserialize_grx.snap
---
source: crates/rattler_menuinst/src/schema.rs
expression: schema
---
MenuInstSchema {
    id: "https://schemas.conda.io/menuinst-1.schema.json",
    schema: "https://json-schema.org/draft-07/schema",
    menu_name: "{{ DISTRIBUTION_NAME }}",
    menu_items: [
        MenuItem {
            command: MenuItemCommand {
                name: Simple(
                    PlaceholderString(
                        "gqrx",
                    ),
                ),
                description: PlaceholderString(
                    "Software defined radio",
                ),
                command: [
                    PlaceholderString(
                        "{{ PREFIX }}/Library/bin/gqrx.exe",
                    ),
                    PlaceholderString(
                        "--edit",
                    ),
                ],
                icon: Some(
                    PlaceholderString(
                        "{{ MENU_DIR }}/gqrx.{{ ICON_EXT }}",
                    ),
                ),
                precommand: None,
                precreate: None,
                working_dir: None,
                activate: None,
                terminal: None,
            },
            platforms: Platforms {
                linux: None,
                osx: None,
                win: Some(
                    Platform {
                        base: BasePlatformSpecific {
                            name: None,
                            description: None,
                            icon: None,
                            command: None,
                            working_dir: None,
                            precommand: None,
                            precreate: None,
                            activate: None,
                            terminal: None,
                        },
                        specific: Windows {
                            desktop: Some(
                                false,
                            ),
                            quicklaunch: Some(
                                false,
                            ),
                            terminal_profile: None,
                            url_protocols: None,
                            file_extensions: None,
                            app_user_model_id: None,
                        },
                    },
                ),
            },
        },
        MenuItem {
            command: MenuItemCommand {
                name: Simple(
                    PlaceholderString(
                        "gqrx [reset]",
                    ),
                ),
                description: PlaceholderString(
                    "Software defined radio [reset settings]",
                ),
                command: [
                    PlaceholderString(
                        "{{ PREFIX }}/Library/bin/gqrx.exe",
                    ),
                    PlaceholderString(
                        "--reset",
                    ),
                    PlaceholderString(
                        "--edit",
                    ),
                ],
                icon: Some(
                    PlaceholderString(
                        "{{ MENU_DIR }}/gqrx.{{ ICON_EXT }}",
                    ),
                ),
                precommand: None,
                precreate: None,
                working_dir: None,
                activate: None,
                terminal: None,
            },
            platforms: Platforms {
                linux: None,
                osx: None,
                win: Some(
                    Platform {
                        base: BasePlatformSpecific {
                            name: None,
                            description: None,
                            icon: None,
                            command: None,
                            working_dir: None,
                            precommand: None,
                            precreate: None,
                            activate: None,
                            terminal: None,
                        },
                        specific: Windows {
                            desktop: Some(
                                false,
                            ),
                            quicklaunch: Some(
                                false,
                            ),
                            terminal_profile: None,
                            url_protocols: None,
                            file_extensions: None,
                            app_user_model_id: None,
                        },
                    },
                ),
            },
        },
    ],
}
